Remove YouTube placeholder from Component_6

--- a/public/assets/meraki-template_webflow_io/extracted-styles.css
+++ b/public/assets/meraki-template_webflow_io/extracted-styles.css
@@ -144,7 +144,7 @@
 [data-frz-id="s5wcuxp1xd"],
 [data-frz-id="kib8zmawcgg"] { color: rgba(26, 26, 26, 0.6) !important; }
 
-[data-frz-id="bemv3qvsnzr"] { padding-top: 56.1702% !important; background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg') !important; background-position: 50% 50% !important; background-size: cover !important; }
+/* YouTube placeholder removed */
 
 [data-frz-id="gxn78jsc8xp"],
 [data-frz-id="todnymexeup"],
